REFACTOR: Add search result page (list type)

--- a/src/main/resources/templates/main/search.html
+++ b/src/main/resources/templates/main/search.html
@@ -7,14 +7,15 @@
 <body>
 
 <!-- JQuery UI -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script th:src="@{/js/stocks.js}"></script>
+
 <script th:inline="javascript">
 
-    var stock_data = stocks;
+    const stock_data = stocks;
     $(document).ready(function () {
         $("#search_input").autocomplete({
             minLength: 2,
